feat: rollback flows for kafka features